src/snapshots/tptp__tests__tfx_logic_formula-7.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
DefinedInfix(
    DefinedInfix {
        left: Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
        op: DefinedInfixPred(
            InfixEquality,
        ),
        right: Variable(
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
        ),
    },
)
