src/snapshots/tptp__tests__tfx_mapping_type-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
MappingType {
    domain: Product(
        XprodType(
            [
                Atomic(
                    Variable(
                        Variable(
                            UpperWord(
                                "A",
                            ),
                        ),
                    ),
                ),
                Atomic(
                    Constant(
                        TypeConstant(
                            TypeFunctor(
                                Lower(
                                    LowerWord(
                                        "c",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
    range: Variable(
        Variable(
            UpperWord(
                "B",
            ),
        ),
    ),
}
