src/snapshots/tptp__tests__tfx_mapping_type.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
MappingType {
    domain: Atomic(
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    ),
    range: Variable(
        Variable(
            UpperWord(
                "B",
            ),
        ),
    ),
}
