src/snapshots/tptp__tests__tfx_non_atomic_type-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Quantified(
    QuantifiedType {
        bound: VariableList(
            [
                Untyped(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ],
        ),
        typ: Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
    },
)
