src/snapshots/tptp__tests__tfx_non_atomic_type-5.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Parenthesised(
    Mapping(
        MappingType {
            domain: Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ),
            range: Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        },
    ),
)
