src/snapshots/tptp__tests__tfx_plain_atomic-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Function(
    Functor(
        Lower(
            LowerWord(
                "f",
            ),
        ),
    ),
    Arguments(
        [
            Logic(
                Unitary(
                    Atomic(
                        Defined(
                            DefinedAtomic(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
