src/snapshots/tptp__tests__tfx_plain_atomic.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Constant(
    Constant(
        Functor(
            Lower(
                LowerWord(
                    "c",
                ),
            ),
        ),
    ),
)
