src/snapshots/tptp__tests__tfx_prefix_unary.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
PrefixUnary {
    op: UnaryConnective,
    formula: Unitary(
        Atomic(
            Defined(
                DefinedAtomic(
                    Constant(
                        DefinedConstant(
                            DefinedFunctor(
                                AtomicDefinedWord(
                                    DollarWord(
                                        LowerWord(
                                            "true",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
