src/snapshots/tptp__tests__tfx_preunit_formula.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Unitary(
    Atomic(
        Defined(
            DefinedAtomic(
                Constant(
                    DefinedConstant(
                        DefinedFunctor(
                            AtomicDefinedWord(
                                DollarWord(
                                    LowerWord(
                                        "true",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
